[gd_scene format=3 uid="uid://0rlk0dt0lkwu"]

[ext_resource type="Theme" uid="uid://ccbn336iigwja" path="res://barkley2/themes/utility_station.tres" id="1_cwbxo"]
[ext_resource type="Script" uid="uid://gsjdu0p7klfk" path="res://barkley2/scenes/_utilityStation/brain_vidcon_levelup_panel.gd" id="2_tjo82"]
[ext_resource type="Texture2D" uid="uid://bqqg3sty0foc5" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilityHoopzFull.png" id="3_c3y5s"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="4_iltjd"]
[ext_resource type="FontFile" uid="uid://b6ag0xl5d2ibh" path="res://barkley2/resources/fonts/fn2c.tres" id="5_ahrae"]
[ext_resource type="PackedScene" uid="uid://c5me4bth578xv" path="res://barkley2/scenes/_utilityStation/brain_level_up_selection.tscn" id="6_5pqgw"]

[sub_resource type="LabelSettings" id="LabelSettings_xk021"]
font = ExtResource("4_iltjd")

[sub_resource type="LabelSettings" id="LabelSettings_w3x42"]
font = ExtResource("5_ahrae")

[node name="brain_vidcon_levelup_panel" type="Control" unique_id=172342373]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 228.0
theme = ExtResource("1_cwbxo")
script = ExtResource("2_tjo82")
metadata/_custom_type_script = "uid://eir54p1frfp7"

[node name="title_panel" type="Panel" parent="." unique_id=1791213847]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 285.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="title_panel" unique_id=1545673673]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "CYBIOTIC AUGMENTATION REGULATOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_panel" type="Panel" parent="." unique_id=1924612638]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 117.0
offset_bottom = 44.0

[node name="mai_leberu_lbl" type="Label" parent="level_panel" unique_id=877402787]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "LEVEL 69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bandwidth" type="Control" parent="." unique_id=289775060]
anchors_preset = 0
offset_left = 125.0
offset_top = 28.0
offset_right = 277.0
offset_bottom = 44.0

[node name="bandwidth_title_panel" type="Panel" parent="bandwidth" unique_id=1575751052]
layout_mode = 0
offset_right = 80.0
offset_bottom = 16.0

[node name="band_lbl" type="Label" parent="bandwidth/bandwidth_title_panel" unique_id=1436779938]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "BANDWIDTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bandwidth_lvl1_panel" type="Panel" parent="bandwidth" unique_id=2028404129]
layout_mode = 0
offset_left = 128.0
offset_right = 152.0
offset_bottom = 16.0

[node name="level_lbl" type="Label" parent="bandwidth/bandwidth_lvl1_panel" unique_id=1335514173]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bandwidth_lvl2_panel" type="Panel" parent="bandwidth" unique_id=1494251618]
layout_mode = 0
offset_left = 104.0
offset_right = 128.0
offset_bottom = 16.0

[node name="level_lbl" type="Label" parent="bandwidth/bandwidth_lvl2_panel" unique_id=2136006292]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bandwidth_lvl3_panel" type="Panel" parent="bandwidth" unique_id=2129426200]
layout_mode = 0
offset_left = 80.0
offset_right = 104.0
offset_bottom = 16.0

[node name="level_lbl" type="Label" parent="bandwidth/bandwidth_lvl3_panel" unique_id=1009952864]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hoopz_stat" type="Control" parent="." unique_id=1638975958]
anchors_preset = 0
offset_left = 5.0
offset_top = 52.0
offset_right = 117.0
offset_bottom = 204.0

[node name="hoopz" type="Panel" parent="hoopz_stat" unique_id=1780000214]
layout_mode = 0
offset_right = 80.0
offset_bottom = 152.0

[node name="my_main_man" type="TextureRect" parent="hoopz_stat/hoopz" unique_id=717444717]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -73.0
offset_right = 34.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c3y5s")
stretch_mode = 2

[node name="weight" type="Panel" parent="hoopz_stat" unique_id=1486934231]
layout_mode = 0
offset_left = 80.0
offset_right = 112.0
offset_bottom = 24.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/weight" unique_id=604738434]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/weight/vbox" unique_id=769736455]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "WEIGHT"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/weight/vbox" unique_id=1326935285]
layout_mode = 2
text = "69~"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="guts" type="Panel" parent="hoopz_stat" unique_id=1314551618]
layout_mode = 0
offset_left = 80.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 48.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/guts" unique_id=157653970]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/guts/vbox" unique_id=639616820]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "GUTS"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/guts/vbox" unique_id=1067737229]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="luck" type="Panel" parent="hoopz_stat" unique_id=1552714103]
layout_mode = 0
offset_left = 80.0
offset_top = 48.0
offset_right = 112.0
offset_bottom = 72.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/luck" unique_id=1946934397]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/luck/vbox" unique_id=1112262061]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "LUCK"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/luck/vbox" unique_id=1321418301]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="acro" type="Panel" parent="hoopz_stat" unique_id=1201803296]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 112.0
offset_bottom = 96.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/acro" unique_id=1076161328]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/acro/vbox" unique_id=46610404]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "ACRO"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/acro/vbox" unique_id=790406306]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="might" type="Panel" parent="hoopz_stat" unique_id=1925310796]
layout_mode = 0
offset_left = 80.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 120.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/might" unique_id=621839612]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/might/vbox" unique_id=484497719]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "MIGHT"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/might/vbox" unique_id=1055263299]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="piety" type="Panel" parent="hoopz_stat" unique_id=1963666497]
layout_mode = 0
offset_left = 80.0
offset_top = 120.0
offset_right = 112.0
offset_bottom = 144.0

[node name="vbox" type="VBoxContainer" parent="hoopz_stat/piety" unique_id=1903763218]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="stat_label" type="Label" parent="hoopz_stat/piety/vbox" unique_id=1575988551]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "PIETY"
label_settings = SubResource("LabelSettings_xk021")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stat_value" type="Label" parent="hoopz_stat/piety/vbox" unique_id=260275224]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_w3x42")
horizontal_alignment = 1

[node name="levelup_display" type="VBoxContainer" parent="." unique_id=84206998]
layout_mode = 0
offset_left = 125.0
offset_top = 52.0
offset_right = 277.0
offset_bottom = 204.0
theme_override_constants/separation = 8

[node name="brain_level_up_guts" parent="levelup_display" unique_id=220570761 instance=ExtResource("6_5pqgw")]
layout_mode = 2
stat_name = "GUTS"

[node name="brain_level_up_luck" parent="levelup_display" unique_id=418569256 instance=ExtResource("6_5pqgw")]
layout_mode = 2
stat_name = "LUCK"

[node name="brain_level_up_acro" parent="levelup_display" unique_id=235087972 instance=ExtResource("6_5pqgw")]
layout_mode = 2
stat_name = "ACRO"

[node name="brain_level_up_might" parent="levelup_display" unique_id=1025815245 instance=ExtResource("6_5pqgw")]
layout_mode = 2
stat_name = "MIGHT"

[node name="brain_level_up_piety" parent="levelup_display" unique_id=1857919613 instance=ExtResource("6_5pqgw")]
layout_mode = 2
stat_name = "PIETY"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
